# django-srcdoc

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/django_srcdoc/: __about__.py
